--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               
-              <h3 class="mb-0"><a target="_blank" href="http://uah.edu.vn/">Ho Chi Minh City University of Architecture</a></h3>
+              <h3 class="mb-0"><a target="_blank" href="https://hcmut.edu.vn/">Ho Chi Minh City University of Technology</a></h3>
               
-              <div class="subheading mb-3">Graphic Design</div>
+              <div class="subheading mb-3">Information and Communication Technology (ICT)</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2012 - 2016</span>
